--- a/smh20140710/Storyboard.storyboard
+++ b/smh20140710/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="eIB-bD-JY1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="eIB-bD-JY1">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -20,31 +20,39 @@
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="87"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SMHContactPlaceholder" id="c4b-vH-9hH">
-                                            <rect key="frame" x="0.0" y="0.0" width="87" height="87"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SMHContactPlaceholder" id="c4b-vH-9hH">
+                                            <rect key="frame" x="0.0" y="0.0" width="174" height="87"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;firstname>" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mKm-ob-VrO">
-                                            <rect key="frame" x="95" y="3" width="192" height="21"/>
+                                            <rect key="frame" x="182" y="3" width="105" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;lastname>" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IwW-gE-MiA">
-                                            <rect key="frame" x="95" y="23" width="192" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IwW-gE-MiA">
+                                            <rect key="frame" x="182" y="23" width="105" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="&lt;lastname>">
+                                                    <attributes>
+                                                        <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <font key="NSFont" size="17" name="HelveticaNeue"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;age>" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q6z-7Z-EDL">
-                                            <rect key="frame" x="95" y="43" width="192" height="21"/>
+                                            <rect key="frame" x="182" y="43" width="105" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;sex>" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fgN-tT-IZh">
-                                            <rect key="frame" x="95" y="63" width="192" height="21"/>
+                                            <rect key="frame" x="182" y="63" width="105" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="highlightedColor"/>
@@ -52,6 +60,11 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="imgPicture" destination="c4b-vH-9hH" id="oWf-qv-yK1"/>
+                                    <outlet property="lblAge" destination="q6z-7Z-EDL" id="Ey9-ZV-wsz"/>
+                                    <outlet property="lblFirstName" destination="mKm-ob-VrO" id="LUT-Bj-pnt"/>
+                                    <outlet property="lblLastName" destination="IwW-gE-MiA" id="WBJ-6O-lBK"/>
+                                    <outlet property="lblSex" destination="fgN-tT-IZh" id="fxZ-9p-KtE"/>
                                     <segue destination="1UB-eD-xiv" kind="push" id="vCw-SU-XDH"/>
                                 </connections>
                             </tableViewCell>
@@ -67,10 +80,10 @@
             </objects>
             <point key="canvasLocation" x="514" y="-27"/>
         </scene>
-        <!--View Controller - <firstname> <lastname>-->
+        <!--Contact DetailsVC - <firstname> <lastname>-->
         <scene sceneID="lPQ-KF-4lp">
             <objects>
-                <viewController id="1UB-eD-xiv" sceneMemberID="viewController">
+                <viewController id="1UB-eD-xiv" customClass="SMHContactDetailsVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QO4-zu-5M7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -91,6 +104,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="&lt;firstname> &lt;lastname>" id="oYn-s2-exh"/>
+                    <connections>
+                        <outlet property="contactNotes" destination="qKI-Iz-zEK" id="vCW-Qg-Uxg"/>
+                        <outlet property="contactPicture" destination="woN-Vu-6K2" id="zR7-Km-6vY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dPG-uh-kiV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
